[project]
authors = [{ name = "SoulMelody", email = "yjxrtzyx@gmail.com" }]
version = "0.1.0"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
dependencies = [
    "librosa>=0.10.1",
    "construct>=2.10.68",
    "click>=8.1.3",
]
name = "WaveTempo"
description = "Import the tempo detection results from librosa into WaveTone projects (Usually helpful for songs with dynamic tempos)."
keywords = []
classifiers = []

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.5.1",
    "ruff>=0.0.288",
]

[tool.pdm.scripts]
wavetempo = { call = "wavetempo.__main__:get_tempos" }

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
