[project]
authors = [{ name = "SoulMelody", email = "yjxrtzyx@gmail.com" }]
version = "0.1.0"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
dependencies = [
    "librosa>=0.11.0",
    "construct>=2.10.70",
    "click>=8.3.3",
]
name = "WaveTempo"
description = "Import the tempo detection results from librosa into WaveTone projects (Usually helpful for songs with dynamic tempos)."
keywords = []
classifiers = []

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.25.1",
]
cuda = [
    "onnxruntime-gpu>=1.25.1",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cufft-cu12>=11.4.1.4",
    "nvidia-cudnn-cu12>=9.21.1.3",
]

[project.scripts]
wavetempo = "wavetempo.__main__:get_tempos"

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
    ],
]

[tool.uv.build-backend]
module-name = "wavetempo"
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
